test/modules/deitz/test_module_access1.good
test_module_access1.chpl:1: In module 'OuterModule':
test_module_access1.chpl:10: error: cannot find 'x' in module 'M'
